{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 95,
  "lineage": "17c04e21-4df0-9054-c53d-ea5a6e858897",
  "resources": [
    {
      "module": "module.region-2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "node",
      "each": "list",
      "provider": "module.region-2.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9cf087c1f27d9b1",
            "arn": "arn:aws:ec2:us-east-1:199790648221:instance/i-0f06b6c5ce3541b4d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f06b6c5ce3541b4d",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "aws-multi-region-west-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b9d6e478c29eca04",
            "private_dns": "ip-11-1-1-195.ec2.internal",
            "private_ip": "11.1.1.195",
            "public_dns": "ec2-54-156-84-205.compute-1.amazonaws.com",
            "public_ip": "54.156.84.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0eafba44a6ea1f111",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-003e700ee7a109434",
            "tags": {
              "Name": "aws-multi-region-west-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0113837816c6b389f",
              "sg-01f20e028fd4b36ca"
            ]
          },
          "dependencies": [
            "module.region-2.aws_key_pair.kp",
            "module.region-2.aws_security_group.ping-ICMP-sg",
            "module.region-2.aws_security_group.ssh-sg",
            "module.region-2.aws_subnet.subnet",
            "module.region-2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.region-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "node",
      "each": "list",
      "provider": "module.region-1.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9cf087c1f27d9b1",
            "arn": "arn:aws:ec2:us-east-1:199790648221:instance/i-087331fb88c732911",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-087331fb88c732911",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "aws-multi-region-east-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0028bf08ab4ae9fa0",
            "private_dns": "ip-10-0-0-193.ec2.internal",
            "private_ip": "10.0.0.193",
            "public_dns": "ec2-54-162-162-144.compute-1.amazonaws.com",
            "public_ip": "54.162.162.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-030401b5d4a2c0f11",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0189bdf0d18e9a7ae",
            "tags": {
              "Name": "aws-multi-region-east-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0290cc0b8c10894ea",
              "sg-0e3cdaa70a092d6a7"
            ]
          },
          "dependencies": [
            "module.region-1.aws_key_pair.kp",
            "module.region-1.aws_security_group.ping-ICMP-sg",
            "module.region-1.aws_security_group.ssh-sg",
            "module.region-1.aws_subnet.subnet",
            "module.region-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.region-2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.region-2.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bd7752b71ff5db29",
            "owner_id": "199790648221",
            "tags": {
              "Name": "aws-multi-region-west-gateway"
            },
            "vpc_id": "vpc-0db5002074afaeaf9"
          },
          "dependencies": [
            "module.region-2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.region-1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.region-1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b0a47794ed61dee8",
            "owner_id": "199790648221",
            "tags": {
              "Name": "aws-multi-region-east-gateway"
            },
            "vpc_id": "vpc-0c195f05691a2c08c"
          },
          "dependencies": [
            "module.region-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.region-2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "module.region-2.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-037e4394b4ef5d5b1",
            "owner_id": "199790648221",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd7752b71ff5db29",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-multi-region-west-subnet-rt"
            },
            "vpc_id": "vpc-0db5002074afaeaf9"
          },
          "dependencies": [
            "module.region-2.aws_internet_gateway.gw",
            "module.region-2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.region-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "module.region-1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c20669d81a3bd7fb",
            "owner_id": "199790648221",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b0a47794ed61dee8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-multi-region-east-subnet-rt"
            },
            "vpc_id": "vpc-0c195f05691a2c08c"
          },
          "dependencies": [
            "module.region-1.aws_internet_gateway.gw",
            "module.region-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.region-2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt",
      "provider": "module.region-2.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a1a298145898829",
            "route_table_id": "rtb-037e4394b4ef5d5b1",
            "subnet_id": "subnet-003e700ee7a109434"
          },
          "dependencies": [
            "module.region-2.aws_internet_gateway.gw",
            "module.region-2.aws_route_table.public-rt",
            "module.region-2.aws_subnet.subnet",
            "module.region-2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.region-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt",
      "provider": "module.region-1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e2d1218a62b66f4",
            "route_table_id": "rtb-0c20669d81a3bd7fb",
            "subnet_id": "subnet-0189bdf0d18e9a7ae"
          },
          "dependencies": [
            "module.region-1.aws_internet_gateway.gw",
            "module.region-1.aws_route_table.public-rt",
            "module.region-1.aws_subnet.subnet",
            "module.region-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.region-2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ping-ICMP-sg",
      "provider": "module.region-2.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199790648221:security-group/sg-01f20e028fd4b36ca",
            "description": "Default security group that allows to ping the instance",
            "egress": [],
            "id": "sg-01f20e028fd4b36ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "alow-ping",
            "name_prefix": null,
            "owner_id": "199790648221",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alow-ping"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db5002074afaeaf9"
          },
          "dependencies": [
            "module.region-2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.region-1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ping-ICMP-sg",
      "provider": "module.region-1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199790648221:security-group/sg-0e3cdaa70a092d6a7",
            "description": "Default security group that allows to ping the instance",
            "egress": [],
            "id": "sg-0e3cdaa70a092d6a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "alow-ping",
            "name_prefix": null,
            "owner_id": "199790648221",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alow-ping"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c195f05691a2c08c"
          },
          "dependencies": [
            "module.region-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.region-2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-sg",
      "provider": "module.region-2.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199790648221:security-group/sg-0113837816c6b389f",
            "description": "Security group for nat instances that allows SSH and VPN traffic from internet",
            "egress": [],
            "id": "sg-0113837816c6b389f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "199790648221",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db5002074afaeaf9"
          },
          "dependencies": [
            "module.region-2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.region-1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-sg",
      "provider": "module.region-1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199790648221:security-group/sg-0290cc0b8c10894ea",
            "description": "Security group for nat instances that allows SSH and VPN traffic from internet",
            "egress": [],
            "id": "sg-0290cc0b8c10894ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "199790648221",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c195f05691a2c08c"
          },
          "dependencies": [
            "module.region-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.region-2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "module.region-2.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199790648221:subnet/subnet-003e700ee7a109434",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "11.1.1.0/24",
            "id": "subnet-003e700ee7a109434",
            "map_public_ip_on_launch": false,
            "owner_id": "199790648221",
            "tags": {
              "Name": "aws-multi-region-west-subnet"
            },
            "vpc_id": "vpc-0db5002074afaeaf9"
          },
          "dependencies": [
            "module.region-2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.region-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "module.region-1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199790648221:subnet/subnet-0189bdf0d18e9a7ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0189bdf0d18e9a7ae",
            "map_public_ip_on_launch": false,
            "owner_id": "199790648221",
            "tags": {
              "Name": "aws-multi-region-east-subnet"
            },
            "vpc_id": "vpc-0c195f05691a2c08c"
          },
          "dependencies": [
            "module.region-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.region-2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.region-2.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199790648221:vpc/vpc-0db5002074afaeaf9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.1.1.0/24",
            "default_network_acl_id": "acl-0528692439c62d968",
            "default_route_table_id": "rtb-0d82f6e374ecc7bc1",
            "default_security_group_id": "sg-0f9bd681f47c3b4c9",
            "dhcp_options_id": "dopt-a82cc6d2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0db5002074afaeaf9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d82f6e374ecc7bc1",
            "owner_id": "199790648221",
            "tags": {
              "Name": "aws-multi-region-west-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.region-1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.region-1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199790648221:vpc/vpc-0c195f05691a2c08c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0de2b1830fb4ad0b5",
            "default_route_table_id": "rtb-0928fe2ff26c18225",
            "default_security_group_id": "sg-00975f9780ffb6811",
            "dhcp_options_id": "dopt-a82cc6d2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c195f05691a2c08c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0928fe2ff26c18225",
            "owner_id": "199790648221",
            "tags": {
              "Name": "aws-multi-region-east-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_peer_1",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "module.vpc_peer_1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "auto_accept": false,
            "id": "pcx-0b35f25ed88a24b10",
            "peer_owner_id": "199790648221",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0db5002074afaeaf9",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Side": "Requester"
            },
            "vpc_id": "vpc-0c195f05691a2c08c"
          },
          "dependencies": [
            "module.region-1.aws_vpc.vpc",
            "module.region-2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peer_1",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer",
      "provider": "module.vpc_peer_1.provider.aws.peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0b35f25ed88a24b10",
            "peer_owner_id": "199790648221",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0db5002074afaeaf9",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Side": "Accepter"
            },
            "vpc_id": "vpc-0c195f05691a2c08c",
            "vpc_peering_connection_id": "pcx-0b35f25ed88a24b10"
          },
          "dependencies": [
            "module.region-1.aws_vpc.vpc",
            "module.region-2.aws_vpc.vpc",
            "module.vpc_peer_1.aws_vpc_peering_connection.peer"
          ]
        }
      ]
    }
  ]
}